# NFDRS4

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/NFDRS4_cli/: CMakeLists.txt
app/NFDRS4_spatial/: CMakeLists.txt
app/NFDRS4_spatial/include/: timer.h
app/NFDRS4_spatial/src/: main.cpp
lib/NFDRS4/include/: nfdrs4.h
lib/NFDRS4/src/: main.cpp  nfdrs4.cpp
scripts/: download_and_install_spatial_libs.sh
